@startuml
'https://plantuml.com/class-diagram

class TiGia{
    + void attach(TiGiaLitstener listener)
    + void detachTiGiaLitstener listener)
    + void notify((float delta)
}
abstract class NhaDauTu
class NhaDauTuA
class NhaDauTuB
interface TiGiaLitstener{
    void listen (float delta)
}
TiGia o--> TiGiaLitstener: listener
TiGiaLitstener <|.. NhaDauTu
NhaDauTu -->TiGia: t
NhaDauTu <|-- NhaDauTuA
NhaDauTu <|-- NhaDauTuB

@enduml